--- a/lab6_css_framework.html
+++ b/lab6_css_framework.html
@@ -22,4 +22,131 @@
                 <h1 class="display-4">Layout Sederhana</h1>
               </div>
             </div>
-           
+            
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Article</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">contact</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+
+            <!--JUMBOTRON-->
+    <div class="jumbotron">
+    <h1 class="display-4">Hello, world!</h1>
+    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat.</p>
+    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </div>
+     <div class="d-flex p-2">
+    <div class="p-2">
+      <!--CARDS-->
+    <div class="row" >
+      <div class="col">
+      <div class="card pt-3">
+        <img src="img.jpg" class="card-img-top rounded-circle" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Heading</h5>
+          <p class="card-text text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+          <p class="card-text text-center"><a href="#" class="btn btn-secondary mt-3">View Detail</a></p>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+      <div class="card pt-3">
+        <img src="img.jpg" class="card-img-top rounded-circle" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Heading</h5>
+          <p class="card-text text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+          <p class="card-text text-center"><a href="#" class="btn btn-secondary mt-3">View Detail</a></p>
+        </div>
+      </div>
+      </div>
+      <div class="col">
+      <div class="card pt-3">
+        <img src="img.jpg" class="card-img-top rounded-circle" alt="...">
+        <div class="card-body">
+          <h5 class="card-title text-center">Heading</h5>
+          <p class="card-text text-center">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
+          <p class="card-text text-center"><a href="#" class="btn btn-secondary mt-3">View Detail</a></p>
+        </div>
+      </div>
+      </div>
+      </div>
+  <hr>
+  <!--CARDS 2-->
+  <div class="mt-3 mb-5">
+    <h2>First Featurette Heading</h2>
+    <div class="row no-gutters">
+      <div class="col-md-3">
+        <img src="Saya.jpg" class="card-img-top rounded-square" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem elit, iaculis in nisl volutpat, malesuada tincidunt arcu. Proin in leo fringilla, vestibulum mi porta, faucibus felis. Integer pharetra est nunc, nec pretium nunc pretium ac.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+<hr>
+  <div class="mt-5">
+    <h2>First Featurette Heading</h2>
+    <div class="row">
+      <div class="col-md-8">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum lorem elit, iaculis in nisl volutpat, malesuada tincidunt arcu. Proin in leo fringilla, vestibulum mi porta, faucibus felis. Integer pharetra est nunc, nec pretium nunc pretium ac.</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <img src="Saya.jpg" class="card-img-top rounded-square" alt="...">
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="p-2">
+<!--LIST GROUP-->
+  <div class="col">
+  <div class="list-group">
+    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+      Widget Header
+    </a>
+    <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+    <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+    <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+    <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+    <a href="#" class="list-group-item list-group-item-action">Widget Link</a>
+  </div>
+  <div class="list-group mt-3">
+    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+      Widget Text
+    </a>
+    <span class="list-group-item list-group-item-action">Vestibulum lorem elit, iaculis in nisl volutpat, malesuada tincidunt arcu.
+      Proin in leo fringilla, vestibulum mi porta, faucibus felis. Integer pharetra est nunc, nec pretium nunc pretium ac.</span>
+  </div>
+</div>  
+</div>
+</div>
+<footer>
+<p>&copy; 2021 - Universitas Pelita Bangsa</p>
+</footer>
+
+</html>
